2013-05-15  Glenn Morris  <rgm@gnu.org>

	* cus-start.el (show-trailing-whitespace): Move to editing basics.
	* faces.el (trailing-whitespace): Don't use whitespace-faces group.
	* obsolete/old-whitespace.el (whitespace-faces): Remove group.
	(whitespace-highlight): Move to whitespace group.

	* comint.el (comint-source):
	* pcmpl-linux.el (pcmpl-linux):
	* shell.el (shell-faces):
	* eshell/esh-opt.el (eshell-opt):
	* international/ccl.el (ccl): Remove empty custom groups.

	* completion.el (dynamic-completion-mode):
	* jit-lock.el (jit-lock-debug-mode):
	* minibuffer.el (completion-in-region-mode):
	* type-break.el (type-break-mode-line-message-mode)
	(type-break-query-mode):
	* emulation/tpu-edt.el (tpu-edt-mode):
	* progmodes/subword.el (global-subword-mode, global-superword-mode):
	* progmodes/vhdl-mode.el (vhdl-electric-mode, vhdl-stutter-mode):
	* term/vt100.el (vt100-wide-mode): Specify explicit :group.

	* term/xterm.el (xterm): Change parent group to terminals.

	* master.el (master): Remove empty custom group.
	(master-mode): Remove unused :group argument.
	* textmodes/refill.el (refill): Remove empty custom group.
	(refill-mode): Remove unused :group argument.

	* textmodes/rst.el (rst-compile-toolsets): Use rst-compile group.

	* cus-dep.el: Provide a feature.
	(custom-make-dependencies): Ignore dotfiles (dir-locals).
	Don't mistakenly ignore files whose basenames match a basename
	from preloaded-file-list (eg cedet/ede/simple.el).
	Add a fallback method for getting :group.

2013-05-15  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-char-by-name): Rename from
	`isearch-insert-char-by-name'.  Doc fix.
	(isearch-forward): Mention `isearch-char-by-name' in
	the docstring.  (Bug#13348)

	* isearch.el (minibuffer-local-isearch-map): Bind "\r" to
	`exit-minibuffer' instead of
	`isearch-nonincremental-exit-minibuffer'.
	(isearch-edit-string): Remove mention of
	`isearch-nonincremental-exit-minibuffer' from docstring.