@@ -1,3 +1,7 @@
+2013-05-16  Leo Liu  <sdl.web@gmail.com>
+
+	* simple.el (prog-indent-sexp): Indent enclosing defun.
+
 2013-05-15  Glenn Morris  <rgm@gnu.org>
 
 	* cus-start.el (show-trailing-whitespace): Move to editing basics.
